--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "React Content Script",
+  "name": "BlackBoard Extension",
   "version": "1.0.0",
   "action": {
     "default_title": "Popup",
@@ -20,7 +20,7 @@
     },
     {
       "matches": ["https://blackboard.unist.ac.kr/*"],
-      "js": ["src/content-script/timeTable/main.tsx"],
+      "js": ["src/content-script/timeTable/main.tsx", "src/content-script/Todo/main.tsx"],
       "media": []
     },
     {
@@ -56,8 +56,8 @@
   "web_accessible_resources" : [
     {
       "resources": [
-          "src/assets/lectureInfo.json",
-          "src/assets/HeXA_logo.png"
+          "public/assets/lectureInfo.json",
+          "public/assets/HeXA_logo.png"
       ],
       "matches": ["<all_urls>"]
 
