--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "url": "^0.11.0",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^3.0.3"
   },
   "devDependencies": {
