--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.10.6",
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "emotion-normalize": "^11.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "url": "^0.11.0",
     "usehooks-ts": "^2.9.1",
@@ -22,6 +26,7 @@
     "@types/chrome": "^0.0.197",
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.17",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
