--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.5",
-    "emotion-normalize": "^11.0.1",
+    "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
+    "emotion-normalize": "^11.0.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
