--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "url": "^0.11.0",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.0.3"
   },
   "devDependencies": {
