--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@emotion/babel-plugin": "^11.10.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
+    "babel-plugin-macros": "^3.1.0",
     "emotion-normalize": "^11.0.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
