--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
     "default_popup": "index.html",
     "default_icon": "logo192.png"
   },
+  "permissions": [
+    "storage",
+    "alarms",
+    "activeTab",
+    "webRequest"
+  ],
   "icons": {},
   "content_scripts": [
     {
@@ -19,8 +25,13 @@
       "media": []
     },
     {
+      "matches": ["<all_urls>"],
+      "js": ["src/content-script/GetMylab/getmylab.js"],
+      "all_frames": true
+    },
+    {
       "matches": ["https://blackboard.unist.ac.kr/*"],
-      "js": ["src/content-script/timeTable/main.tsx", "src/content-script/Todo/main.tsx"],
+      "js": ["src/content-script/timeTable/main.tsx", "src/content-script/Todo/main.tsx", "src/content-script/CancelLogout/CancelLogout.js"],
       "media": []
     },
     {
@@ -33,8 +44,9 @@
       "run_at": "document_end"
     },
     {
-      "matches": ["https://blackboard.unist.ac.kr/*"],
-      "js": ["src/content-script/CancelLogout/CancelLogout.js"]
+      "matches": ["https://blackboard.unist.ac.kr/webapps/blackboard/content/listContent.jsp*"],
+      "js": ["src/content-script/AssignmentList/assignmentList.tsx"]
+
     },
     {
       "matches": ["https://unist-kr.zoom.us/j/*"],
@@ -42,10 +54,7 @@
       "run_at": "document_end"
     }
   ],
-  "permissions": [
-    "storage",
-    "alarms"
-  ],
+  
   "host_permissions": [
     "<all_urls>"
   ],
@@ -65,7 +74,8 @@
     },
     {
       "resources": [
-          "src/content-script/LoadAssignment/loadfile-append.js"
+          "src/content-script/LoadAssignment/loadfile-append.js",
+          "src/content-script/CancelLogout/CancelLogout-append.js"
       ],
       "matches": ["https://blackboard.unist.ac.kr/*"] 
     },
@@ -77,15 +87,16 @@
     },
     {
       "resources": [
-          "src/content-script/CancelLogout/CancelLogout-append.js"
-      ],
-      "matches": ["https://blackboard.unist.ac.kr/*"] 
-    },
-    {
-      "resources": [
           "src/content-script/ChangeCollabName/ChangeCollabName-append.js"
       ],
       "matches": ["https://unist-kr.zoom.us/*"]
+    },
+    {
+      "resources": [
+          "src/content-script/GetMylab/getmylab-append.js"
+      ],
+      "matches": ["<all_urls>"],
+      "all_frames": true
     }
   ]
 }
