--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
     "emotion-normalize": "^11.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
