--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-popover": "1.0.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-color": "^3.0.6",
