--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-popover": "1.0.5",
+    "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
