--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-popover": "1.0.5",
     "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/mime-types": "^2.1.1",
     "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
     "emotion-normalize": "^11.0.1",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
