--- a/manifest.json
+++ b/manifest.json
@@ -9,18 +9,17 @@
   },
   "permissions": [
     "storage",
-    "alarms",
     "activeTab",
-    "webRequest",
-    "identity",
-    "identity.email"
+    "identity"
   ],
   "oauth2": {
-    "client_id": "380279767804-39su41apgh655gpl1omcu9106caob58h.apps.googleusercontent.com",
-    "scopes": ["https://www.googleapis.com/auth/calendar",
-    "https://www.googleapis.com/auth/calendar.readonly",
-    "https://www.googleapis.com/auth/calendar.events",
-    "https://www.googleapis.com/auth/userinfo.email"]
+    "client_id": "342264675239-crqs9j8rl0nk4eth2um683vkjmcb6hu2.apps.googleusercontent.com",
+    "scopes": [
+      "https://www.googleapis.com/auth/calendar",
+      "https://www.googleapis.com/auth/calendar.readonly",
+      "https://www.googleapis.com/auth/calendar.events",
+      "https://www.googleapis.com/auth/userinfo.email"
+    ]
   },
   "background": {
     "service_worker": "background.js"
@@ -28,35 +27,60 @@
   "icons": {},
   "content_scripts": [
     {
-      "matches": ["https://blackboard.unist.ac.kr/webapps/portal/execute/tabs/*"],
+      "matches": [
+        "https://blackboard.unist.ac.kr/webapps/portal/execute/tabs/*"
+      ],
       "js": [
         "src/content-script/GetLectureInfo/getLectureInfo.tsx"
       ],
       "media": []
     },
     {
-      "matches": ["https://mylab.pearson.com/Student/*", "https://openvellum.ecollege.com/course.html?courseId*"],
-      "js": ["src/content-script/GetMylab/main.tsx"]
+      "matches": [
+        "https://mylab.pearson.com/Student/*",
+        "https://openvellum.ecollege.com/course.html?courseId*"
+      ],
+      "js": [
+        "src/content-script/GetMylab/main.tsx"
+      ]
     },
     {
-      "matches": ["https://mylab.pearson.com/api/studenthome?requestType=studenthomedata*"],
-      "js": ["src/content-script/GetMylab/getmylab.tsx"]
+      "matches": [
+        "https://mylab.pearson.com/api/studenthome?requestType=studenthomedata*"
+      ],
+      "js": [
+        "src/content-script/GetMylab/getmylab.tsx"
+      ]
     },
     {
-      "matches": ["https://blackboard.unist.ac.kr/*"],
-      "js": ["src/content-script/TimeTable/main.tsx", "src/content-script/Todo/main.tsx", "src/content-script/CancelLogout/CancelLogout.js"],
+      "matches": [
+        "https://blackboard.unist.ac.kr/*"
+      ],
+      "js": [
+        "src/content-script/TimeTable/main.tsx",
+        "src/content-script/Todo/main.tsx",
+        "src/content-script/CancelLogout/CancelLogout.js"
+      ],
       "media": []
     },
     {
-      "matches": ["https://blackboard.unist.ac.kr/webapps/assignment/uploadAssignment*"],
-      "js": ["src/content-script/LoadAssignment/loadfile.tsx"]
+      "matches": [
+        "https://blackboard.unist.ac.kr/webapps/assignment/uploadAssignment*"
+      ],
+      "js": [
+        "src/content-script/LoadAssignment/loadfile.tsx"
+      ]
     },
     {
-      "matches": ["https://blackboard.unist.ac.kr/webapps/blackboard/content/listContent.jsp*"],
-      "js": ["src/content-script/AssignmentList/assignmentList.tsx", "src/content-script/ContentDownloader/main.tsx"]
+      "matches": [
+        "https://blackboard.unist.ac.kr/webapps/blackboard/content/listContent.jsp*"
+      ],
+      "js": [
+        "src/content-script/AssignmentList/assignmentList.tsx",
+        "src/content-script/ContentDownloader/main.tsx"
+      ]
     }
   ],
-  
   "host_permissions": [
     "<all_urls>"
   ],
@@ -64,22 +88,25 @@
     "extension_pages": "script-src 'self'; object-src 'self'",
     "sandbox": "sandbox allow-scripts; script-src 'self'; object-src 'self'"
   },
-  "web_accessible_resources" : [
+  "web_accessible_resources": [
     {
       "resources": [
-          "public/assets/lectureInfo.json",
-          "public/assets/HeXA_logo.png",
-          "public/icons/*.png"
+        "public/assets/lectureInfo.json",
+        "public/assets/HeXA_logo.png",
+        "public/icons/*.png"
       ],
-      "matches": ["<all_urls>"]
-
+      "matches": [
+        "<all_urls>"
+      ]
     },
     {
       "resources": [
-          "src/content-script/LoadAssignment/loadfile-append.js",
-          "src/content-script/CancelLogout/CancelLogout-append.js"
+        "src/content-script/LoadAssignment/loadfile-append.js",
+        "src/content-script/CancelLogout/CancelLogout-append.js"
       ],
-      "matches": ["https://blackboard.unist.ac.kr/*"] 
+      "matches": [
+        "https://blackboard.unist.ac.kr/*"
+      ]
     }
   ]
 }
