--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 3,
   "name": "BlackBoard Extension",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "action": {
     "default_title": "Popup",
     "default_popup": "index.html",
-    "default_icon": "public/logo192.png"
+    "default_icon": "public/assets/HeXA_logo.png"
   },
   "permissions": [
     "storage",
