--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "action": {
     "default_title": "Popup",
     "default_popup": "index.html",
-    "default_icon": "public/assets/HeXA_logo.png"
+    "default_icon": "public/assets/HeXA_icon.png"
   },
   "permissions": [
     "storage",
