--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.env
 node_modules
 dist
+src/content-script/Quiz/*
 dist-ssr
 *.local
 *.zip
