--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/mime-types": "^2.1.1",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react-color": "^3.0.6",
     "@types/react-redux": "^7.1.25",
     "emotion-normalize": "^11.0.1",
@@ -28,10 +29,12 @@
     "jszip-utils": "^0.1.0",
     "mime-types": "^2.1.35",
     "moment": "^2.29.4",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.0.5",
     "url": "^0.11.0",
     "web-vitals": "^3.0.3"
