--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"module": "ESNext",
-		"moduleResolution": "Node",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
@@ -19,6 +19,7 @@
 		"types": ["@emotion/react/types/css-prop"],
 		"jsxImportSource": "@emotion/react"
 	},
+
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
