--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "plasmo-migrate",
-  "displayName": "Plasmo migrate",
+  "name": "blackboardextension",
+  "displayName": "BlackBoard-Extension",
   "version": "0.0.1",
   "description": "BlackBoard-Extension",
   "author": "123wwwa",
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@plasmohq/messaging": "^0.6.2",
@@ -25,7 +26,7 @@
     "locale": "link:date-fns/esm/locale",
     "moment": "^2.30.1",
     "pdfjs-dist": "^4.1.392",
-    "plasmo": "0.85.2",
+    "plasmo": "0.86.1",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^6.9.0",
