--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@plasmohq/storage": "^1.10.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-switch": "^1.0.3",
+    "babel-plugin-emotion": "^11.0.0",
     "date-fns": "^3.6.0",
     "emotions": "^0.0.1",
     "jszip": "^3.10.1",
@@ -34,6 +35,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.0",
+    "@emotion/babel-plugin": "^11.11.0",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
     "@types/node": "20.11.5",
@@ -54,7 +57,8 @@
         "resources": [
           "assets/lectureInfo.json",
           "assets/HeXA_logo.png",
-          "icons/*.png",
+          "assets/HeXA_icon.png",
+          "assets/icons/*.png",
           "pdf.worker.mjs"
         ],
         "matches": [
