--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "emotions": "^0.0.1",
     "jszip": "^3.10.1",
     "locale": "link:date-fns/esm/locale",
+    "mime-types": "^2.1.35",
     "moment": "^2.30.1",
     "plasmo": "0.86.1",
     "react": "18.2.0",
